src/test/ui/conditional-compilation/test-cfg.stderr
error[E0425]: cannot find function `foo` in this scope
  --> $DIR/test-cfg.rs:7:5
   |
LL |     foo();
   |     ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
